// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardBalance renders correctly 1`] = `
.emotion-0 {
  margin-top: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

<div>
  <p
    className="emotion-0"
  >
    Bitcoin
  </p>
  <p
    className="emotion-2"
  >
    1526.56 
    <abbr
      className="emotion-1"
      title="Millibitcoin"
    >
      mBTC
    </abbr>
  </p>
</div>
`;

exports[`CardBalance renders correctly with badge caption 1`] = `
.emotion-1 {
  margin-top: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.emotion-2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

.emotion-0 {
  color: #fff;
  background-color: #0CD664;
  padding: 0.125rem 0.4375rem;
  text-align: center;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 0.5rem;
  line-height: 0.625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  font-weight: 700;
  margin-left: 1rem;
}

<div>
  <p
    className="emotion-1"
  >
    Bitcoin
    <span
      className="emotion-0"
    >
      Active
    </span>
  </p>
  <p
    className="emotion-3"
  >
    1526.56 
    <abbr
      className="emotion-2"
      title="Millibitcoin"
    >
      mBTC
    </abbr>
  </p>
</div>
`;

exports[`CardBalance renders with currency if no unitTitle provided 1`] = `
.emotion-0 {
  margin-top: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

<div>
  <p
    className="emotion-0"
  >
    Bitcoin
  </p>
  <p
    className="emotion-2"
  >
    1526.56 
    <abbr
      className="emotion-1"
      title="Bitcoin"
    >
      mBTC
    </abbr>
  </p>
</div>
`;
